src/objects/Meeting__c.object
<CustomObject>
    <fields>
        <fullName>Conference_Room__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conference Room</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2) AND 3 AND 4</booleanFilter>
            <errorMessage>Conference room not found or is insufficient for your meeting.</errorMessage>
            <filterItems>
                <field>$Source.Projector_Required__c</field>
                <operation>equals</operation>
                <valueField>Conference_Room__c.Has_Projector__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Projector_Required__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>Conference_Room__c.Number_of_Seats_Available__c</field>
                <operation>greaterOrEqual</operation>
                <valueField>$Source.Number_of_Participants__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Office__c</field>
                <operation>equals</operation>
                <valueField>Conference_Room__c.Conference_Room_Location__c</valueField>
            </filterItems>
            <infoMessage>Search results only display conference rooms that can support your meeting requirements.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Conference_Room__c</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Participants__c</fullName>
        <label>Number of Participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Office</label>
        <referenceTo>Office__c</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projector_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Projector Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Meeting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>